tests/baselines/reference/tsxDefaultAttributesResolution2.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    interface Prop {
        x: true;
    }
    class Poisoned extends React.Component<Prop, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    // OK
    let p = <Poisoned x/>;